crates/math-core/tests/snapshots/error_test__operatorname_with_text_command.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\operatorname{\\ae}"
---
Error: Unknown command "\ae".
   ╭─[ <input>:1:15 ]
   │
 1 │ \operatorname{\ae}
   │               ─┬─  
   │                ╰─── unknown command
───╯
